fixed too wide checkbox label UX#1

--- a/blocks/checkbox/_checkbox.scss
+++ b/blocks/checkbox/_checkbox.scss
@@ -67,7 +67,7 @@
 
   cursor: pointer;
 
-  width: inherit;
+  width: fit-content;
 }
 
 .checkbox__input:checked ~ .checkbox__label {
